testsuite/tests/layout_poly/use_mli_dynamic_default_bad.reference
File "use_mli_dynamic_default_bad.ml", line 18, characters 20-48:
18 | let () = use_static Mli_with_dynamic_default.foo
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This value is "dynamic" but is expected to be "static".
